# SQLinjector_MCP

./: .gitignore  README.md  pyproject.toml
payloads/: example_payloads.txt
src/sqli_mcp/: __init__.py  http_client.py  models.py  scanner.py  server.py
src/sqli_mcp/payloads/: __init__.py  blind.py  boolean_based.py  error_based.py  loader.py  time_based.py  union_based.py
