[project]
name = "sqli-mcp"
version = "1.0.0"
description = "MCP Server for SQL Injection vulnerability discovery"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.scripts]
sqli-mcp = "sqli_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sqli_mcp"]
